tests/res/scoping/use_before_assign.say
// A non-null binding used before assignment is rejected.
say x;
print(x); // error: 'x' is used before it is assigned
